machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

/// \brief DTB state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *bootargs;       ///< Bootargs to pass to kernel
    const char *init;           ///< Initialization commands to be executed as root on boot
    const char *entrypoint;     ///< Commands to execute the main application
    const char *image_filename; ///< ROM image file
} cm_dtb_config;
/// \brief Memory range configuration
typedef struct {                // NOLINT(modernize-use-using)
    uint64_t start;             ///< Memory range start position
    uint64_t length;            ///< Memory range length
    bool shared;                ///< Target changes to range affect image file?
    const char *image_filename; ///< Memory range image file name
} cm_memory_range_config;
/// \brief Memory range configuration array
typedef struct { // NOLINT(modernize-use-using)
    cm_memory_range_config *entry;
    size_t count;
} cm_memory_range_config_array;
/// \brief TLB device state configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *image_filename; ///< TLB image file name
} cm_tlb_config;
/// \brief CLINT device state configuration
typedef struct {       // NOLINT(modernize-use-using)
    uint64_t mtimecmp; ///< Value of mtimecmp CSR
} cm_clint_config;
/// \brief HTIF device state configuration
typedef struct {          // NOLINT(modernize-use-using)
    uint64_t fromhost;    ///< Value of fromhost CSR
    uint64_t tohost;      ///< Value of tohost CSR
    bool console_getchar; ///< Make console getchar available?
    bool yield_manual;    ///< Make yield manual available?
    bool yield_automatic; ///< Make yield automatic available?
} cm_htif_config;
/// \brief microarchitecture RAM configuration
typedef struct {                // NOLINT(modernize-use-using)
    const char *image_filename; ///< RAM image file name
} cm_uarch_ram_config;