machine-bindings/cartesi-machine-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_cm_dtb_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_dtb_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_dtb_config>(),
        32usize,
        concat!("Size of: ", stringify!(cm_dtb_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_dtb_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_dtb_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bootargs) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_dtb_config),
            "::",
            stringify!(bootargs)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).init) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_dtb_config),
            "::",
            stringify!(init)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entrypoint) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_dtb_config),
            "::",
            stringify!(entrypoint)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).image_filename) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_dtb_config),
            "::",
            stringify!(image_filename)
        )
    );
}
#[doc = " \\brief Memory range configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_memory_range_config {
    #[doc = "< Memory range start position"]
    pub start: u64,
    #[doc = "< Memory range length"]
    pub length: u64,
    #[doc = "< Target changes to range affect image file?"]
    pub shared: bool,
    #[doc = "< Memory range image file name"]
    pub image_filename: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_cm_memory_range_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_memory_range_config> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_memory_range_config>(),
        32usize,
        concat!("Size of: ", stringify!(cm_memory_range_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_memory_range_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_memory_range_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).start) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config),
            "::",
            stringify!(start)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config),
            "::",
            stringify!(length)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).shared) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config),
            "::",
            stringify!(shared)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).image_filename) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config),
            "::",
            stringify!(image_filename)
        )
    );
}
#[doc = " \\brief Memory range configuration array"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_memory_range_config_array {
    pub entry: *mut cm_memory_range_config,
    pub count: usize,
}
#[test]
fn bindgen_test_layout_cm_memory_range_config_array() {
    const UNINIT: ::std::mem::MaybeUninit<cm_memory_range_config_array> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_memory_range_config_array>(),
        16usize,
        concat!("Size of: ", stringify!(cm_memory_range_config_array))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_memory_range_config_array>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_memory_range_config_array))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).entry) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config_array),
            "::",
            stringify!(entry)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).count) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_memory_range_config_array),
            "::",
            stringify!(count)
        )
    );
}
#[doc = " \\brief TLB device state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_tlb_config {
    #[doc = "< TLB image file name"]
    pub image_filename: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_cm_tlb_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_tlb_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_tlb_config>(),
        8usize,
        concat!("Size of: ", stringify!(cm_tlb_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_tlb_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_tlb_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).image_filename) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_tlb_config),
            "::",
            stringify!(image_filename)
        )
    );
}
#[doc = " \\brief CLINT device state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_clint_config {
    #[doc = "< Value of mtimecmp CSR"]
    pub mtimecmp: u64,
}
#[test]
fn bindgen_test_layout_cm_clint_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_clint_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_clint_config>(),
        8usize,
        concat!("Size of: ", stringify!(cm_clint_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_clint_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_clint_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).mtimecmp) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_clint_config),
            "::",
            stringify!(mtimecmp)
        )
    );
}
#[doc = " \\brief HTIF device state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_htif_config {
    #[doc = "< Value of fromhost CSR"]
    pub fromhost: u64,
    #[doc = "< Value of tohost CSR"]
    pub tohost: u64,
    #[doc = "< Make console getchar available?"]
    pub console_getchar: bool,
    #[doc = "< Make yield manual available?"]
    pub yield_manual: bool,
    #[doc = "< Make yield automatic available?"]
    pub yield_automatic: bool,
}
#[test]
fn bindgen_test_layout_cm_htif_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_htif_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_htif_config>(),
        24usize,
        concat!("Size of: ", stringify!(cm_htif_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_htif_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_htif_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).fromhost) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_config),
            "::",
            stringify!(fromhost)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tohost) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_config),
            "::",
            stringify!(tohost)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).console_getchar) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_config),
            "::",
            stringify!(console_getchar)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).yield_manual) as usize - ptr as usize },
        17usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_config),
            "::",
            stringify!(yield_manual)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).yield_automatic) as usize - ptr as usize },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_htif_config),
            "::",
            stringify!(yield_automatic)
        )
    );
}
#[doc = " \\brief Rollup state configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_rollup_config {
    #[doc = "< Represents whether the rest of the struct have been filled"]
    pub has_value: bool,
    #[doc = "< RX buffer memory range"]
    pub rx_buffer: cm_memory_range_config,
    #[doc = "< TX buffer memory range"]
    pub tx_buffer: cm_memory_range_config,
}
#[test]
fn bindgen_test_layout_cm_rollup_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_rollup_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_rollup_config>(),
        72usize,
        concat!("Size of: ", stringify!(cm_rollup_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_rollup_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_rollup_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).has_value) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_rollup_config),
            "::",
            stringify!(has_value)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).rx_buffer) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_rollup_config),
            "::",
            stringify!(rx_buffer)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).tx_buffer) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_rollup_config),
            "::",
            stringify!(tx_buffer)
        )
    );
}
#[doc = " \\brief microarchitecture RAM configuration"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cm_uarch_ram_config {
    #[doc = "< RAM image file name"]
    pub image_filename: *const ::std::os::raw::c_char,
}
#[test]
fn bindgen_test_layout_cm_uarch_ram_config() {
    const UNINIT: ::std::mem::MaybeUninit<cm_uarch_ram_config> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<cm_uarch_ram_config>(),
        8usize,
        concat!("Size of: ", stringify!(cm_uarch_ram_config))
    );
    assert_eq!(
        ::std::mem::align_of::<cm_uarch_ram_config>(),
        8usize,
        concat!("Alignment of ", stringify!(cm_uarch_ram_config))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).image_filename) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(cm_uarch_ram_config),
            "::",
            stringify!(image_filename)
        )
    );
}
